优化发布流程